# leadsy

./: README.md  docker-compose.yml
backend/: .env.template  Dockerfile  LICENSE  alembic.ini  pyproject.toml
backend/src/leadsy_api/: __init__.py  main.py
backend/src/leadsy_api/api/: dependencies.py
backend/src/leadsy_api/api/routes/: __init__.py  authentication.py  password.py  users.py
backend/src/leadsy_api/core/: config.py  mailing.py  security.py
backend/src/leadsy_api/database/: session.py
backend/src/leadsy_api/database/migrations/: env.py
backend/src/leadsy_api/database/migrations/versions/: 57e664cd16f5_add_password_reset_tokens_table.py  6d72f913dab2_update_personal_access_tokens_table.py  a228e991e24d_create_users_table.py  a3de8755d4d5_add_password_reset_tokens_table.py  cf00905f57a1_create_personal_access_token_table.py  dfdb8f91e651_create_users_table.py
backend/src/leadsy_api/emails/: forgot_password.html  registration.html
backend/src/leadsy_api/models/: __init__.py  access_tokens.py  password_reset_tokens.py  personal_access_tokens.py  users.py
backend/src/leadsy_api/schemas/: password.py  token.py  users.py
backend/tests/: conftest.py
backend/tests/routes/: test_authentication.py  test_password.py  test_users.py
