[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "leadsy_api"
authors = [{name = "Khwarz", email = "karoumem01@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fastapi[all]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "mypy",
]
