[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "leadsy_api"
authors = [{name = "Khwarz", email = "karoumem01@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fastapi[all]",
    "SQLAlchemy>=2.0",
    "psycopg2-binary",
    "alembic",
    "databases[postgresql]",
    "passlib[bcrypt]",
    "python-jose[cryptography]"
]

[project.optional-dependencies]
test = [
    "pytest",
    "mypy",
    "coverage",
    "isort",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    "error"
]

[tool.ruff]
select = ["E", "W", "C", "B"]
ignore = [
    "E501",
    "B008",
    "C901",
]
